--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li onmouseover="mudafoto('_imagens/especificacoes.png')" onmouseout="mudafoto('_imagens/glass-oculos-preto-peq.png')">
-                        <a href="specs.html">Especificações</a>
+                        <a href="https://google-glass.netlify.com/specs.html">Especificações</a>
                     </li>
                     <li onmouseover="mudafoto('_imagens/fotos.png')" onmouseout="mudafoto('_imagens/glass-oculos-preto-peq.png')" >
                         <a href="fotos.html">Fotos</a>
