--- a/specs.html
+++ b/specs.html
@@ -19,7 +19,7 @@
         <header id="cabecalho">
             <hgroup>
                 <h1>Google Glass</h1>
-                <h2>A revolução do Google está chegando</h2>
+                <h2>A revolução do Google está chegando!</h2>
             </hgroup>
 
 
